[tool.poetry]
name = "streamlit-multimodal-sample"
version = "0.1.0"
description = ""
authors = ["RyuzakiShinji <151008078+RyuzakiShinji@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.43.2"
openai = "^1.66.3"
tiktoken = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.isort]
combine-as-imports = true
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
split-on-trailing-comma = true
